// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter should render 1`] = `
<Fragment>
  <Box
    display="inlineBlock"
    gridArea="filter"
    marginBottom="s20"
    marginLeft="s20"
    marginTop="s20"
  >
    <Card>
      <Box
        flexDirection="column"
        padding="s12"
      >
        <Box
          marginBottom="s4"
        >
          <Text
            fontSize="fs14"
            fontWeight="fw700"
          >
            Canal
          </Text>
        </Box>
        <Divider />
        <Box
          flexDirection="column"
          justifyContent="flexStart"
        >
          <Box
            key="__OPTION_1__"
            marginTop="s12"
          >
            <Checkbox
              label={
                <Image
                  alt="channel logo"
                  width="30px"
                />
              }
              name="__OPTION_1__"
              onChange={[Function]}
              value="__OPTION_1__"
            />
          </Box>
          <Box
            key="__OPTION_2__"
            marginTop="s12"
          >
            <Checkbox
              label={
                <Image
                  alt="channel logo"
                  width="30px"
                />
              }
              name="__OPTION_2__"
              onChange={[Function]}
              value="__OPTION_2__"
            />
          </Box>
        </Box>
      </Box>
    </Card>
  </Box>
  <div
    products={Array []}
  />
</Fragment>
`;

exports[`Filter should render when mobile 1`] = `
<Fragment>
  <Box
    display="inlineBlock"
    gridArea="filter"
    marginBottom="s20"
    marginTop="s20"
  >
    <Card>
      <Box
        flexDirection="column"
        padding="s12"
      >
        <Box
          marginBottom="s4"
        >
          <Text
            fontSize="fs14"
            fontWeight="fw700"
          >
            Canal
          </Text>
        </Box>
        <Divider />
        <Box
          justifyContent="spaceAround"
        >
          <Box
            key="__OPTION_1__"
            marginTop="s12"
          >
            <Checkbox
              label={
                <Image
                  alt="channel logo"
                  width="30px"
                />
              }
              name="__OPTION_1__"
              onChange={[Function]}
              value="__OPTION_1__"
            />
          </Box>
          <Box
            key="__OPTION_2__"
            marginTop="s12"
          >
            <Checkbox
              label={
                <Image
                  alt="channel logo"
                  width="30px"
                />
              }
              name="__OPTION_2__"
              onChange={[Function]}
              value="__OPTION_2__"
            />
          </Box>
        </Box>
      </Box>
    </Card>
  </Box>
  <div
    products={Array []}
  />
</Fragment>
`;
